2009-09-07  Jan Urbanski  <jurbanski@flumotion.com>

	patch by: Xavier Queralt  <xqueralt@flumotion.com>

	* doc/man/flumotion-admin.1:
	* doc/man/flumotion-manager.1:
	* doc/man/flumotion-worker.1:
	Document missing command line options in manpages. Closes #1354.

2009-09-07  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/component/consumers/disker/disker.py:
	Prevent the disker from starting if the ical-schedule property is set
	and one of the required modules is missing.
	Original coding forgot to raise an exception after adding an Error
	message to the component state, which resulted in a sad disker, but one
	that was still disking.
	Fixes #809.

2009-09-07  Jan Urbanski  <jurbanski@flumotion.com>

	* data/make-dummy-cert:
	Remove bashism from make-dummy-cert (possibly it was just a typo). We
	don't translate the usage message for that script anyway.
	See Debian bug #530971.

2009-09-07  Julien Le Goff  <jlegoff@flumotion.com>

	reviewed by: Jan

	* flumotion/monitor/nagios/stream.py:
	Use the timeout option.

2009-09-03  Guillaume Quintard  <guillaume.quintard@flumotion.com>

	reviewed by: Arek

	* flumotion/component/bouncers/icalbouncer.py:
	* flumotion/component/consumers/disker/disker.py:
	Catch more (possible) exceptions from the icalendar module
	Fixes #1267

2009-09-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/admin/gtk/componentlist.py:
	  Remove unused variable. Thanks to Arek for spotting.

2009-09-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	reviewed by: Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/admin/gtk/adminwindow.py:
	* flumotion/admin/gtk/componentlist.py:
	  Allow deletion of sleeping components with no worker logged in.
	  canStart == (canDelete && workers logged in).
	  Fixes #1348.

2009-09-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/admin/gtk/componentlist.py:
	  Fix/normalize docstrings.
