@@ -19,8 +19,13 @@
 
 # Headers in this file shall remain intact.
 
+from flumotion.common import gstreamer, messages
+from flumotion.common.i18n import N_, gettexter
 from flumotion.worker.checks import check
 from flumotion.component import feedcomponent
+
+
+T_ = gettexter()
 
 
 class Dirac(feedcomponent.ParseLaunchComponent):
@@ -28,7 +33,22 @@ class Dirac(feedcomponent.ParseLaunchComponent):
     checkOffset = True
 
     def do_check(self):
-        return check.do_check(self, check.checkPlugin, 'schro', 'schroedinger')
+        d = check.do_check(self, check.checkPlugin, 'schro', 'gst-plugins-bad')
+
+        def check_schroenc_bug(result, component):
+            if gstreamer.get_plugin_version('schro') == (1, 0, 7, 0):
+                m = messages.Warning(
+                    T_(N_("Version %s of the '%s' GStreamer plug-in "
+                          "contains a bug.\n"), '1.0.7', 'schroenc'))
+                m.add(T_(N_("The downstream components might stay hungry.\n")))
+                m.add(T_(N_("The bug has been fixed during the transition of "
+                            "'%s' to the '%s' plug-ins set. "
+                            "Please upgrade '%s' to version %s, "
+                            "which contains the fixed plug-in."),
+                         'schroenc', 'gst-plugins-bad', 'schroenc', '0.10.14'))
+                component.addMessage(m)
+                return result
+        return d.addCallback(check_schroenc_bug, self)
 
     def get_pipeline_string(self, properties):
         return "ffmpegcolorspace ! schroenc name=encoder"
